fix spacing of tabs that was broken by including bootstrap

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,16 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body{
-    background-color: var(--body-background-color);
+    background-color: var(--body-background-color) !important;
+
+    width: 100%;
+    height: 100%;
 }
 
 /* set default font */
